# drt-sc-dns

./: Cargo.toml  README.md  build-wasm.sh  rust-toolchain.toml  wat-build.sh
.github/workflows/: actions.yml  release.yml
c-version/: Root-tree
c-version/output/: c-version.wasm
dns/: Cargo.toml
dns/denali/: 01_dns_init.steps.json  02_dns_init_check.steps.json  03_register_name_ok.steps.json  04_register_name_again.steps.json  05_claim.steps.json  06_register_other_name_same_shard.steps.json
dns/fuzz/: Cargo.toml
dns/history/: dns_v0_3_0.wasm  dns_v0_3_1.wasm
dns/meta/: Cargo.toml
dns/scenarios/: 03_register_name_ok.steps.json  04_register_name_again.steps.json  06_register_other_name_same_shard.steps.json  migrate.scen.json  resolve-numbat.scen.json
dns/src/: lib.rs  value_state.rs
dns/tests/: denali_test.rs  name_validation_test.rs
dns/wasm/: Cargo.toml
dns/wasm/src/: lib.rs
tools/name-miner/: Cargo.toml
