[package]
name = "dns"
version = "1.1.0"
edition = "2021"
authors = ["contact@dharitri.org"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sc-dns"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Dharitri Domain Name Service smart contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]
[dependencies.dharitri-sc-modules]
version = "1.0.1"

[dependencies.dharitri-sc]
version = "1.0.1" 
[dev-dependencies.dharitri-sc-scenario]
version = "1.0.1"
