[package]
name = "numbat-wasm-sc-dns"
version = "1.1.0"
edition = "2018"

authors = ["Dharitri <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sc-dns"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Numbat Domain Name Service smart contract"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[dependencies]
numbat-wasm = "0.0.18"

[dependencies.numbat-wasm-modules]
version = "0.0.18"

[dev-dependencies.numbat-wasm-debug]
version = "0.0.18"

[dependencies.getrandom]
version = "0.2.17"
features = ["js"]
