[[bin]]
name = "fuzz_value_state"
path = "fuzz_targets/fuzz_value_state.rs"
test = false
doc = false

[package]
name = "dns-fuzz"
version = "0.0.0"
authors = ["contact@dharitri.org"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3"
dharitri-sc = "1.0.1"
dharitri-sc-scenario = "1.0.1"

[dependencies.dns]
path = ".."

[workspace]
members = ["."]
