[package]
name = "dns-meta"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false
[dependencies.dns]
path = ".."

[dependencies.dharitri-sc-meta] 
version = "1.0.14"

# [dependencies.dharitri-sc-meta]
# path = "/home/dugong/Desktop/teja-work/my_rust-works/rs-sdks/drt-rs-sdk-0.39.5/framework/meta"
