[package]
name = "numbat-wasm-sc-dns-wasm"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.numbat-wasm-sc-dns]
path = ".."

[dependencies.numbat-wasm-node]
version = "0.0.18"

[dependencies.numbat-wasm-output]
version = "0.0.18"
features = ["wasm-output-mode"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
